# Tantar

./: .gitignore  CNAME  Dockerfile  README.md  database.py  docker-compose.yml  extract.py  extract.txt  index.html  main.py  ocr.py  preprocess.py  pyproject.toml  requirements.txt  serve.py
.github/workflows/: deploy.yml
